LPS-35159 - Fix add choice buttons alignment on polls portlet

--- a/portal-web/docroot/html/portlet/polls/css/main.css
+++ b/portal-web/docroot/html/portlet/polls/css/main.css
@@ -3,4 +3,20 @@
 		clear: both;
 		display: block;
 	}
+
+	.last-choice {
+		button {
+			float: left;
+			margin-bottom: 10px;
+			margin-left: -2px;
+		}
+
+		input.language-value {
+			float: left;
+		}
+
+		.control-group {
+			margin-bottom: 0;
+		}
+	}
 }
